--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                                 <!--데스크탑 아이콘-->
                                 <!--모바일 아이콘-->
                                 <div class="mMobileIcon">
-                                    <a onclick="window.open('https://heong416.github.io/hasamdongcoffee','하삼동커피','width=430,height=700,top=100,left=500,location=no,status=no,scrollbars=yes');">
+                                    <a onclick="window.open('https://heong416.github.io/linkey','링키','width=430,height=700,top=100,left=500,location=no,status=no,scrollbars=yes');">
                                         <img src="images/main/mMobileIcon.png" alt="모바일아이콘">
                                         <p>모바일</p>
                                     </a>
@@ -417,7 +417,7 @@
                                 <!--데스크탑 아이콘-->
                                 <!--모바일 아이콘-->
                                 <div class="mMobileIcon">
-                                    <a onclick="window.open('https://heong416.github.io/hasamdongcoffee','하삼동커피','width=430,height=700,top=100,left=500,location=no,status=no,scrollbars=yes');">
+                                    <a onclick="window.open('https://heong416.github.io/intopet','인투펫','width=430,height=700,top=100,left=500,location=no,status=no,scrollbars=yes');">
                                         <img src="images/main/mMobileIcon.png" alt="모바일아이콘">
                                         <p>모바일</p>
                                     </a>
@@ -453,7 +453,7 @@
                                 <!--데스크탑 아이콘-->
                                 <!--모바일 아이콘-->
                                 <div class="mMobileIcon">
-                                    <a onclick="window.open('https://heong416.github.io/hasamdongcoffee','하삼동커피','width=430,height=700,top=100,left=500,location=no,status=no,scrollbars=yes');">
+                                    <a onclick="window.open('https://heong416.github.io/gamcheonvillage','감천문화마을','width=430,height=700,top=100,left=500,location=no,status=no,scrollbars=yes');">
                                         <img src="images/main/mMobileIcon.png" alt="모바일아이콘">
                                         <p>모바일</p>
                                     </a>
